--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@redux-devtools/core": "^3.13.1",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-router": "0.0.1-beta.198",
+    "lucide-react": "^0.291.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.3",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -22,6 +31,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
