--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,8 +20,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@/*": ["./src/*"],
-      "@/store": ["./src/state/store"],
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src"],
