--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^8.1.3",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.21.6",
     "redux": "^4.2.1"
   },
   "devDependencies": {
