--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@redux-devtools/core": "^3.13.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-router": "0.0.1-beta.198",
+    "formik": "^2.4.5",
     "lucide-react": "^0.291.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,9 @@
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.21.6",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "uuid": "^9.0.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
